--- a/aigou-plat-parent/aigou-plat-service/pom.xml
+++ b/aigou-plat-parent/aigou-plat-service/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>aigou-plat-service</artifactId>
 <dependencies>
     <dependency>
+        <groupId>cn.itsource</groupId>
+        <artifactId>aigou-plat-interface</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger2</artifactId>
         <version>2.9.2</version>
@@ -21,6 +26,11 @@
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger-ui</artifactId>
         <version>2.9.2</version>
+    </dependency>
+    <!--配置中心支持-->
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
     </dependency>
 </dependencies>
 
