--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>aigou-zuul</module>
     <module>aigou-basic-parent</module>
     <module>aigou-plat-parent</module>
+      <module>aigou-product-parent</module>
   </modules>
 
   <name>aigou-parent</name>
