--- a/aigou-basic-parent/aigou-basic-util/pom.xml
+++ b/aigou-basic-parent/aigou-basic-util/pom.xml
@@ -10,6 +10,24 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>aigou-basic-util</artifactId>
-
+<dependencies>
+    <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+    <dependency>
+        <groupId>redis.clients</groupId>
+        <artifactId>jedis</artifactId>
+        <version>2.9.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.velocity/velocity -->
+    <dependency>
+        <groupId>org.apache.velocity</groupId>
+        <artifactId>velocity</artifactId>
+        <version>1.7</version>
+    </dependency>
+    <dependency>
+        <groupId>org.csource.fastdfs</groupId>
+        <artifactId>fastdfs</artifactId>
+        <version>1.2</version>
+    </dependency>
+</dependencies>
 
 </project>
