--- a/aigou-common-parent/aigou-common-service/src/main/resources/bootstrap.yml
+++ b/aigou-common-parent/aigou-common-service/src/main/resources/bootstrap.yml
@@ -15,5 +15,9 @@ spring:
       discovery:
         enabled: true #从eureka上面找配置服务
         service-id: SPRING-CLOUD-CONFIG-SERVER #指定服务名
+  data:
+      elasticsearch:
+        cluster-name: elasticsearch
+        cluster-nodes: 127.0.0.1:9300
 server:
   max-http-header-size: 10240000 #响应头过长400，配置这个解决
